--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
     background-color: black;
     color: #b3a070;
-    background-image: url("../images/84+test+preview.png");
+    background-image: url("../images/library.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
