--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -1,7 +1,7 @@
 body {
     height: 100%;
     background-color: black;
-    color: #b3a070;
+    color: #773b31;
     background-image: url("../images/library.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
